# knowledge-graph-schema

./: .env.example  .gitignore  CLAUDE.md  NEO4J_INTEGRATION.md  README.md  docker-compose.neo4j.yml  docker-compose.yml  mcp_config.md  neo4j-usage.md  pyproject.toml  requirements.txt  test_view_parsing.py
src/relational_kg/: __init__.py  analyzer.py  api_server.py  cli.py  database.py  ddl_generator.py  graph.py  llm_cluster_analyzer.py  llm_extractor.py  mcp_server.py  sql_executor.py  visualizer.py
src/relational_kg/backends/: base.py  neo4j_backend.py  networkx_backend.py
